@@ -1,6 +1,7 @@
 Changes for 1.8.4rc3
 
- - [ZBX-2349] Unicode support for macros and web scenario steps (KB)
+ - [ZBX-3107] fixed graph bugs: problem with large values, problem with uptime format (KB)
+ - [ZBX-2349] unicode support for macros and web scenario steps (KB)
  - [ZBX-3137] fixed errors related to deleting and application that is used in a web scenario (KB)
 
 Changes for 1.8.4rc2
